[package]
name = "flare-datafusion"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion = { version = "51.0.0", default-features = false } # aisle depends on 51.0.0
aisle = { version = "0.2.1", features = ["datafusion"] }
async-trait = "0.1.89"
fusio = { version = "0.6.1", features = ["tokio"] }
tonbo = "=0.4.0-a1" # tonbo 0.4.0-a1 depends on arrow 57 so, we use use df version that uses same arrow version, it is 51.0.0
tokio-util = { version = "0.7.18", features = ["rt"] }
futures = "0.3.33"
