[package]
name = "flaredb"
version = "0.1.7"
edition = "2024"
description = "Apache Beam native streaming database"
license = "Apache-2.0"
repository = "https://github.com/flare-db/flare-db"
authors = ["Ganesh Sivakumar"]

[dependencies]
beam-model-rs = "2.70.0"
tokio-stream = "0.1.18"
tonic = "0.14.2"
tokio = { version = "1.38", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "process",
] }
arrow-array = "57.3.1"
arrow-buffer = "57.3.1"
arrow-schema = "57.3.1"
tonbo = "=0.4.0-a1"
typed-arrow = "0.6.1" #tonbo dependens on 0.6.1
fusio = { version = "0.6.1", features = ["tokio"] }
dashmap = "6.1.0"
prost = "0.14.3"
petgraph = "0.8.3"
log = "0.4.29"
indexmap = "2.13.0"
thiserror = "2.0.18"
env_logger = "0.11.9"
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"
fs = "0.0.5"
tokio-util = { version = "0.7.18", features = ["rt"] }
#clap = "4.6.1"
[dependencies.uuid]
version = "1.23.1"
features = ["v4"]

[dev-dependencies]
tempfile = "3"
